final/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awesome-cats-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awesome-cats-backend
  template:
    metadata:
      labels:
        app: awesome-cats-backend
    spec:
      containers:
      - name: awesome-cats-backend
        image: gcr.io/kubernates-426007/aawesome_cats_backend:latest
        ports:
        - containerPort: 3000
