final/curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curlpod
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "3600"]
