final/external-dns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
  labels:
    app.kubernetes.io/name: external-dns  
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.13.5
          args:
            - --source=service
            - --source=ingress
            - --domain-filter=aiperi.online 
            - --provider=google
            - --log-format=json
            - --google-zone-visibility=public
            - --policy=upsert-only
            - --registry=txt
            - --txt-owner-id=my-identifier
          volumeMounts:
            - name: gcp-credentials
              mountPath: /etc/secrets/service-account
              readOnly: true
      volumes:
        - name: gcp-credentials
          secret:
            secretName: external-dns-gcp-credentials
