final/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
