final/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: "app.aiperi.online"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.aiperi.online
    secretName: tls-secret
  rules:
  - host: app.aiperi.online
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: awesome-cats-frontend
            port:
              number: 80
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: awesome-cats-backend
            port:
              number: 3000
